# librime-jni

./: .gitignore  .gitmodules  0001-librime-qjs.patch  0001-opencc.patch  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  clang-format.sh  make.py  opencc.py
.github/workflows/: commit-ci.yaml  manual.yaml
cmake/: AddRCInfo.cmake  Boost.cmake  OpenccWorkarounds.cmake  Rime.cmake
librime_jni/: CMakeLists.txt  helper-types.h  jni-utils.h  key.cc  levers.cc  objconv.h  opencc.cc  proto.cc  rime_jni.cc
